exports[`Component: Pagination when passed a next prop should render a next link 1`] = `
<div>
  <a
    href="/?q=simon&page=2"
    onClick={[Function]}>
    Next
  </a>
</div>
`;

exports[`Component: Pagination when passed a prev and next prop should render a previous and next link 1`] = `
<div>
  <a
    href="/?q=simon&page=1"
    onClick={[Function]}>
    Previous
  </a>
  <a
    href="/?q=simon&page=2"
    onClick={[Function]}>
    Next
  </a>
</div>
`;

exports[`Component: Pagination when passed a prev prop should render a previous link 1`] = `
<div>
  <a
    href="/?q=simon&page=1"
    onClick={[Function]}>
    Previous
  </a>
</div>
`;
